# fast_copy

./: .gitignore  .lgtm.yml  CMakeLists.txt  build.cmake  fast_copy.c  fast_copy.h
.github/workflows/: main.yml
tests/: CMakeLists.txt  test_fast_copy.c
